--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "/Users/lengk/.local/share/virtualenvs/tf-Cs-uSHTQ/bin/python"
+    "python.pythonPath": "/Users/lengk/.local/share/virtualenvs/tf-Cs-uSHTQ/bin/python",
+    "editor.scrollBeyondLastLine": true,
 }
